DD-36409- merge team/dlrm into main - DLRM milestone-1 release (#188)
* Upgrade to java 11 + excluded test utils core

Change-Id: I2e29c9f5945d288e971949370552653c8befd1af

* New 11.0.1-FRAMEWORK-SNAPSHOT

* removing persistence property

Change-Id: I2d6b79b60a1f45c822be0de8f359851d4e278e6b

* fixing results war deployment issue

Change-Id: I374992a640e2aa6512ac679c80c4a0de09a51651

* Add healthcheck integration test

Change-Id: I5dc96983fe7941d79d17af6a48100a2927f05bf5

* Add docker files

Change-Id: Ic63d75b18119ef792a661cb72422d6133b214644

* New 11.0.2-FRAMEWORK-SNAPSHOT

* update liquibase to 4.10.0

Change-Id: I5ce09753be71d042d84d401d1e348e422712afa8

* New 11.0.3-FRAMEWORK-SNAPSHOT

* Fix ignored test in NCESNotificationIT

Change-Id: Ib2e355a2fcdd6f03a4ff4af0ee8f8fe056c5af5a

* Fix InformantRegisterDocumentRequestIT public events usage

Change-Id: I6d76aa4d9a9cf0c70e8e5c3ede173c461f91517a

* New 11.0.4-FRAMEWORK-SNAPSHOT

* Update framework version 25 for artemis 2.x client

Change-Id: I3ebd3d3c96d29a5858c69a8a90aaa338ddea4c0f

* Fix JMX MBean connection issues in HearingResultedIT

Change-Id: I4060f20a8a0485abac5cfb050184e32537cd68ac

* New 11.0.5-FRAMEWORK-SNAPSHOT

* Point RestAssured dependency to io.rest-assured

Change-Id: Ifd40f6d19299527773a6437ba7c3c883549ff8ff

* New 11.0.6-FRAMEWORK-SNAPSHOT

* Update to service-parent-pom M27 for message client changes

Change-Id: Ifd40f6d19299527773a6437ba7c3c883549ff8fe

* New 11.0.7-FRAMEWORK-SNAPSHOT

* New 11.0.8-FRAMEWORK-SNAPSHOT

* New 11.0.9-FRAMEWORK-SNAPSHOT

* Upgrade service parent pom to 11.0.29-FRAMEWORK-SNAPSHOT

Change-Id: I927265c684d4e766d4bdce4e10b8f1519c66457c

* New 11.0.10-FRAMEWORK-SNAPSHOT

* New 11.0.11-FRAMEWORK-SNAPSHOT

* EI-944 : Include jmx client into every context

* Upgrade service parent pom to 11.0.34-FRAMEWORK-SNAPSHOT.

Change-Id: I867aa8e82f7f5b0706090d468b7a607f40f2738d

* New 11.0.12-FRAMEWORK-SNAPSHOT

* New 11.0.13-FRAMEWORK-SNAPSHOT

* New 11.0.14-FRAMEWORK-SNAPSHOT

*